tests/requests/invalid/002.py
from gunicorn.http.errors import InvalidRequestLine
request = InvalidRequestLine
